fix: cut off roster tooltip

--- a/scss/partials/_roster.scss
+++ b/scss/partials/_roster.scss
@@ -411,9 +411,9 @@ li.jsxc-hide-offline {
   @include presence-indicator(" .jsxc-avatar");
   list-style: none;
   margin: 0;
-  margin-bottom: 1em;
   overflow: hidden;
   padding: 0;
+  padding-bottom: 1em;
   width: 100%;
   z-index: 85;
 
